--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,23 +10,23 @@
   <div class="row">
     <div class="col s6">Cottage</div>
     <div class="col s3 price">$73000</div>
-    <div class="col s3">
-        <a class="waves-effect waves-light btn" (click)="onSwitcherClick()">Add</a>
-        <!-- <div class="switch">
+    <div class="col s3 switch-wrapper">
+        <!-- <a class="waves-effect waves-light btn" (click)="onSwitcherClick()">Add</a> -->
+        <div class="switch">
             <label>
-              <input type="checkbox" id="type-house" (click)="onSwitcherClick()">
+              <input type="checkbox" (click)="onSwitcherClick()">
               <span class="lever"></span>
             </label>
-        </div> -->
+        </div>
     </div>
   </div>
   <div class="row">
     <div class="col s6">Smart home features</div>
     <div class="col s3 price">$10000</div>
-    <div class="col s3">
+    <div class="col s3 switch-wrapper">
       <div class="switch">
           <label>
-            <input type="checkbox">
+            <input type="checkbox" (click)="onSwitcherClick()"> 
             <span class="lever"></span>
           </label>
         </div>
@@ -35,10 +35,10 @@
   <div class="row">
     <div class="col s6">Extra fast building</div>
     <div class="col s3 price">$15000</div>
-    <div class="col s3">
+    <div class="col s3 switch-wrapper">
       <div class="switch">
           <label>
-            <input type="checkbox">
+            <input type="checkbox" (click)="onSwitcherClick()">
             <span class="lever"></span>
           </label>
         </div>
@@ -47,10 +47,10 @@
   <div class="row">
     <div class="col s6">Garage</div>
     <div class="col s3 price">$7000</div>
-    <div class="col s3">
+    <div class="col s3 switch-wrapper">
       <div class="switch">
           <label>
-            <input type="checkbox">
+            <input type="checkbox" (click)="onSwitcherClick()">
             <span class="lever"></span>
           </label>
         </div>
