Added .app-wrapper to fit the app into screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<div class="container">
+<div class="container app-wrapper">
   <div class="col s12"><h1 class="site-logo">{{title}}</h1></div>
   <div class="row">
     <div class="col s6">Type</div>
